slot context bar prevent out of screen

--- a/src/app/slotting/edit/components/slot.component.scss
+++ b/src/app/slotting/edit/components/slot.component.scss
@@ -9,7 +9,7 @@
   &.expanded {
     opacity: 1;
     visibility: visible;
-    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22) !important;
+    // box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22) !important;
   }
 
   .arrow {
@@ -22,11 +22,14 @@
   }
 
   .tools {
+    position: relative;
     background-color: black;
     width: 100%;
     height: 100%;
     border-radius: 4px;
     color: white;
+    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22) !important;
+
     form {
       display: flex;
 
